--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jem",
-  "version": "0.0.1",
-  "description": "JavaScript Event Manager",
+  "name": "jemjs",
+  "version": "1.0.0",
+  "description": "Minimalistic JavaScript Event Manager",
   "main": "dist/jem.js",
   "scripts": {
     "test": "gulp",
